--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@ layout: home
 <div style="overflow: auto">
     <img src="assets/img/pointilism_fortor_profile.jpg.JPG" width="200px" style="float:left; margin-right:2em;" alt="portrait">
     <span>Fan Feng is an undergraduate student at university of North Carolina at Chapel Hill majoring computer science.</span>
+    <span>The site is currently under construction.</span>
 </div>
