Added content for art and project

--- a/contact.html
+++ b/contact.html
@@ -3,4 +3,5 @@ layout: page
 title: Contact
 permalink: /contact/
 ---
-<h2>Email: fanfengng@yahoo.com</h2>
+<h2>Personal Email: fanfengng@yahoo.com</h2>
+<h2>School Email: fan8@live.unc.edu</h2>
