--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: home
 ---
 <div style="overflow: auto">
-    <img src="assets/img/pointilism_fortor_profile.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
+    <img src="assets/img/2DGraphicsEngine/pointilism_fortor_profile.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
     <span>Fan Feng is an undergraduate student at university of North Carolina at Chapel Hill majoring computer science.</span>
+    <span>I am interested in computer graphics and using mathematics and code to generate beautiful images.</span>
+    <span>I can make decent 3D models and animations using blender.</span>
     <span>The site is currently under construction.</span>
 </div>
