updated some description of the website

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: home
 ---
 <div style="overflow: auto">
     <img src="assets/img/2DGraphicsEngine/pointilism_fortor_profile.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
-    <span>Fan Feng is an undergraduate student at university of North Carolina at Chapel Hill majoring computer science.</span>
-    <span>I am interested in computer graphics and using mathematics and code to generate beautiful images.</span>
-    <span>I can make decent 3D models and animations using blender.</span>
-    <span>The site is currently under construction.</span>
+    <span>Fan Feng is an undergraduate student at university of North Carolina at Chapel Hill majoring computer science and mathematics.</span>
+    <span>I am interested in computer graphics.</span>
+    <span>This site shows some past projects and art works and I have worked on before.</span>
 </div>
