--- a/projects/_posts/2019-08-11-ARProstateBiopsyModule.html
+++ b/projects/_posts/2019-08-11-ARProstateBiopsyModule.html
@@ -6,8 +6,8 @@ date: 2019-08-11 21:53:32 -0500
 categories: projects
 weight: 3
 ---
-<p>This is a project that I developed in the summer of my sophomore year.<br/>
-I made the 3D animation of patient and doctor engagement.<br/>
+<p>This is a project that I developed in the summer of my junior year.<br/>
+I made the 3D animation of patient and doctor interaction.<br/>
 I also made realistic looking models for ultrasound machine and clothes for patient.<br/>
     Then the work was imported to Unity in order to add some interaction elements such as video controller and also 3D sound.</p>
 
