--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: home
 ---
 <div style="overflow: auto">
-    <img src="assets/img/2DGraphicsEngine/pointilism_fortor_profile.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
-    <span>Fan Feng is an undergraduate student at university of North Carolina at Chapel Hill majoring computer science and mathematics.</span>
-    <span>I am interested in computer graphics.</span>
-    <span>This site shows some past projects and art works and I have worked on before.</span>
+    <img src="assets/img/pointilism_fortor_profile.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
+    <h1>Fan Feng 冯梵</h1>
+    <span>This site shows some past projects and art works and I have worked on.</span>
 </div>
