update of website

--- a/projects.html
+++ b/projects.html
@@ -3,15 +3,13 @@ layout: page
 title: Projects
 permalink: /projects/
 ---
-<ul>
-    {% assign projects = site.categories.projects %}
-    {% assign projects = projects | sort:"weight" %}
-    {% for project in projects %}
-    <li>
 
-        <a href="{{project.url}}">{{ project.title }}</a>
-    </li>
-    {% endfor %}
-</ul>
+<a href="https://cdr.lib.unc.edu/concern/honors_theses/r494vr41m">Mobile AR Telepresence (Honors Thesis)</a><br>
+{% assign projects = site.categories.projects %}
+{% assign projects = projects | sort:"weight" %}
+{% for project in projects %}
+<a href="{{project.url}}">{{ project.title }}</a><br>
+{% endfor %}
+
 
 
