--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@ layout: home
 <div style="overflow: auto">
     <img src="assets/img/pointilism_fortor_profile.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
     <h1>Fan Feng 冯梵</h1>
-    <p>I am a first year MSDA student at Dartmouth College. 
-        My research interests include physics-based simulation and computer graphics in general. 
-        This site shows some past projects and art works and I have worked on.<p>
+    <p>Fan Feng is a first year PhD student at Dartmouth College advised by Prof. Bo Zhu. 
+        Her research interests include physics-based simulation and computer graphics in general. 
+        This site shows her publications, projects and miscellaneous art works.</p>
+    <p>She recieved B.S. in Computer Science and B.A in Mathematics and minor in studio arts form University of North Carolina at Chapel Hill, advised by prof. Henry Fuchs.</p>
     <span>Email: fan.feng.gr@dartmouth.edu or fanfengng@yahoo.com</span>    
 </div>
 
@@ -15,6 +16,15 @@ layout: home
     <br>
     <br>
     <h1>Publications</h1>
+
+    <div>
+        <img src="assets/img/paper//impulse.jpg" width="200px" style="float:right; margin-left:2em;" alt="clebsch_gauge_fluid">
+        <p><b>Impulse Fluid Simulation</b><br>
+        IEEE Transactions on Visualization and Computer Graphics (TVCG)<br>
+        <b>Fan Feng</b>, Jinyuan Liu, Shiying Xiong, Shuqi Yang, Yaorui Zhang, Bo Zhu
+        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9707648">[paper]</a> <a href="ImpulseFluid">[webpage]</a></p>
+    </div>
+    <br><br>
     
     <div>
         <img src="assets/img/paper/clebsch_gauge_fluid.jpg" width="200px" style="float:right; margin-left:2em;" alt="clebsch_gauge_fluid">
