--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: home
         <p><b>Impulse Fluid Simulation</b><br>
         IEEE Transactions on Visualization and Computer Graphics (TVCG)<br>
         <b>Fan Feng</b>, Jinyuan Liu, Shiying Xiong, Shuqi Yang, Yaorui Zhang, Bo Zhu
-        <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9707648">[paper]</a> <a href="ImpulseFluid">[webpage]</a><a href="https://youtu.be/MFAXIETFC9M">[video]</a></p>
+        <a href="assets/paper/impulse.pdf">[paper]</a> <a href="ImpulseFluid">[webpage]</a><a href="https://youtu.be/MFAXIETFC9M">[video]</a></p>
     </div>
     <br><br>
     
