added topo voronoi project

--- a/index.html
+++ b/index.html
@@ -16,12 +16,21 @@ layout: home
     <br>
     <br>
     <h1>Publications</h1>
+    
+    <div>
+        <img src="assets/img/paper//topo_voronoi.png" width="200px" style="float:right; margin-left:2em;" alt="topo_voronoi">
+        <p><b>Cellular Topology Optimization on Differentiable Voronoi Diagrams</b><br>
+            Submitted to Computer Methods in Applied Mechanics and Engineering (CMAME)<br>
+        <b>Fan Feng</b>, Shiying Xiong, Ziyue Liu, Zangyueyang Xian, Yuqing Zhou, Hiroki Kobayashi, Atsushi Kawamoto, Tsuyoshi Nomura, Bo Zhu<br>
+        <a href="https://arxiv.org/pdf/2204.10313.pdf">[paper]</a> <a href="TopoVoronoi">[webpage]</a><a href="https://youtu.be/pXEM0PZKp48">[video]</a></p>
+    </div>
+    <br><br>
 
     <div>
-        <img src="assets/img/paper//impulse.jpg" width="200px" style="float:right; margin-left:2em;" alt="clebsch_gauge_fluid">
+        <img src="assets/img/paper//impulse.jpg" width="200px" style="float:right; margin-left:2em;" alt="impulse_fluid">
         <p><b>Impulse Fluid Simulation</b><br>
         IEEE Transactions on Visualization and Computer Graphics (TVCG)<br>
-        <b>Fan Feng</b>, Jinyuan Liu, Shiying Xiong, Shuqi Yang, Yaorui Zhang, Bo Zhu
+        <b>Fan Feng</b>, Jinyuan Liu, Shiying Xiong, Shuqi Yang, Yaorui Zhang, Bo Zhu<br>
         <a href="assets/paper/impulse.pdf">[paper]</a> <a href="ImpulseFluid">[webpage]</a><a href="https://youtu.be/MFAXIETFC9M">[video]</a></p>
     </div>
     <br><br>
@@ -30,7 +39,7 @@ layout: home
         <img src="assets/img/paper/clebsch_gauge_fluid.jpg" width="200px" style="float:right; margin-left:2em;" alt="clebsch_gauge_fluid">
         <p><b>Clebsch Gauge Fluid</b><br>
         ACM Transactions on Graphics (SIGGRAPH 2021)<br>
-        Shuqi Yang, Shiying Xiong, Yaorui Zhang, <b>Fan Feng</b>, Jinyuan Liu, Bo Zhu
+        Shuqi Yang, Shiying Xiong, Yaorui Zhang, <b>Fan Feng</b>, Jinyuan Liu, Bo Zhu<br>
         <a href="https://www.cs.dartmouth.edu/~bozhu/papers/clebsch_gauge_fluid.pdf">[paper]</a> <a href="https://y-sq.github.io/proj/clebsch_gauge_fluid/">[webpage]</a></p>
     </div>
     <br><br>
