--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 layout: home
 ---
 <div style="overflow: auto">
-    <img src="assets/img/pointilism_fortor_profile.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
-    <h1>Fan Feng 冯梵</h1>
-    <p>Fan Feng is a first year PhD student at Dartmouth College advised by Prof. Bo Zhu. 
-        Her research interests include physics-based simulation and computer graphics in general. 
-        This site shows her publications, projects and miscellaneous art works.</p>
-    <p>She recieved B.S. in Computer Science and B.A in Mathematics and minor in studio arts form University of North Carolina at Chapel Hill, advised by prof. Henry Fuchs.</p>
-    <span>Email: fan.feng.gr@dartmouth.edu or fanfengng@yahoo.com</span>    
+    <img src="assets/img/head.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
+    <h1>Yitong Deng 邓宜桐</h1>
+    <h4>yitong.deng.gr@dartmouth.edu</h4>
+    <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
+        I received my Bachelor of Arts <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music, advised by Professor Bruce Maxwell. 
+        My research focus on computer graphics, around which I have explored topics in dynamic simulation, robotic control, and machine learning.</p>   
 </div>
 
 <div style="overflow: auto">
@@ -41,37 +40,6 @@ layout: home
         ACM Transactions on Graphics (SIGGRAPH 2021)<br>
         Shuqi Yang, Shiying Xiong, Yaorui Zhang, <b>Fan Feng</b>, Jinyuan Liu, Bo Zhu<br>
         <a href="https://www.cs.dartmouth.edu/~bozhu/papers/clebsch_gauge_fluid.pdf">[paper]</a> <a href="https://y-sq.github.io/proj/clebsch_gauge_fluid/">[webpage]</a></p>
-    </div>
-    <br><br>
-
-    <div>
-        <img src="assets/img/paper/vortex_segments.jpg" width="200px" style="float:right; margin-left:2em;" alt="vortex_segments">
-        <p><b>Incompressible Flow Simulation on Vortex Segment Clouds</b><br>
-        ACM Transactions on Graphics (SIGGRAPH 2021)<br>
-        Shiying Xiong, Rui Tao, Yaorui Zhang, <b>Fan Feng</b>, Bo Zhu<br>
-        <a href="https://cs.dartmouth.edu/~bozhu/papers/vortex_segment.pdf">[paper]</a> <a href="https://shiyingxiong.github.io/proj/VortexSegments/VortexSegments">[webpage]</a>
-    </p>
-    </div>
-    <br><br>
-    
-
-    <div>
-        <img src="assets/img/paper/mobile_ar.jpg" width="200px" style="float:right; margin-left:2em;" alt="vortex_segments">
-        <p><b>Mobile, Egocentric Human Body Motion Reconstruction Using Only Eyeglasses-mounted Cameras and a Few Body-worn Inertial Sensors</b><br>
-        IEEE Virtual Reality and 3D User Interfaces (IEEE VR 2021), March, 2021 (a Best Conference Paper Award)<br>
-        Young-Woon Cha, Husam Shaik, Qian Zhang, <b>Fan Feng</b>, Adrian Ilie, Andrei State, and Henry Fuchs <br>
-        <a href="https://drive.google.com/file/d/1NuTNKeBjAbjP0rJjLHZTRGuxSS1PTzXb/view">[paper]</a> <a href="https://www.youtube.com/watch?v=kI7tp1tSWn4">[video]</a>
-        <a href="https://www.youtube.com/watch?v=YRSFRZqe4g8">[presentation]</a> <a href="https://sites.google.com/site/youngwooncha/egovip">[project]</a>
-        </p>
-    </div>
-    <br><br>
-
-    <div>
-        <img src="assets/img/paper/laproscopy.png" width="200px" style="float:right; margin-left:2em;" alt="laparoscopy">
-        <p><b>Enhancing a laparoscopy training system with augmented reality visualization</b><br>
-        2019 Spring Simulation Conference (SpringSim)<br>
-        Hao Jiang, Siqing Xu, Andrei State, <b>Fan Feng</b>, Henry Fuchs, Minsik Hong, Jerzy Rozenblit<br>
-        <a href="https://dl.acm.org/doi/pdf/10.5555/3338264.3338280">[paper]</a></p>
     </div>
     
 </div>
