--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: home
 ---
 <div style="overflow: auto">
-    <img src="assets/img/head.jpg" width="200px" style="float:left; margin-right:2em;" alt="portrait">
+    <img src="assets/img/head.jpg" width="250px" style="float:left; margin-right:2em; margin-top:2em;" alt="portrait">
     <h1>Yitong Deng 邓宜桐</h1>
-    <h4>yitong.deng.gr@dartmouth.edu</h4>
+    <h3><u>yitong.deng.gr@dartmouth.edu</u></h3>
     <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
         I received my Bachelor of Arts <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music, advised by Professor Bruce Maxwell. 
         My research focus on computer graphics, around which I have explored topics in dynamic simulation, robotic control, and machine learning.</p>   
