--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: home
     <h1>Publications</h1>
     
     <div>
-        <img src="assets/img/paper//topo_voronoi.png" width="200px" style="float:right; margin-left:2em;" alt="topo_voronoi">
+        <img src="assets/img/melp_square_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="melp">
         <p><b>A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam Simulation</b><br>
             SIGGRAPH 2022<br>
         <b>Yitong Deng</b>, Mengdi Wang, Xiangxin Kong, Shiying Xiong, Zangyueyang Xian, and Bo Zhu<br>
@@ -26,7 +26,7 @@ layout: home
     <br><br>
 
     <div>
-        <img src="assets/img/paper/clebsch_gauge_fluid.jpg" width="200px" style="float:right; margin-left:2em;" alt="clebsch_gauge_fluid">
+        <img src="assets/img/sphbubble_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="sphbubble">
         <p><b>Thin-Film Smoothed Particle Hydrodynamics Fluid</b><br>
         SIGGRAPH 2021<br>
         Mengdi Wang, <b>Yitong Deng</b>, Xiangxin Kong, Aditya Prasad, Shiying Xiong, and Bo Zhu<br>
@@ -34,7 +34,7 @@ layout: home
     </div>
 
     <div>
-        <img src="assets/img/paper//impulse.jpg" width="200px" style="float:right; margin-left:2em;" alt="impulse_fluid">
+        <img src="assets/img/soft_drone_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="impulse_fluid">
         <p><b>Soft Multicopter Control Using Neural Dynamics Identification</b><br>
         CORL 2020<br>
         <b>Yitong Deng</b>, Yaorui Zhang, Xingzhe He, Shuqi Yang, Yunjin Tong, Michael Zhang, Daniel DiPietro, and Bo Zhu<br>
