--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Projects
-permalink: /projects/
+title: Miscellaneous
+permalink: /miscellaneous/
 ---
 <head>
     <style>
@@ -29,13 +29,3 @@ permalink: /projects/
     }
     </style>
 </head>
-
-<a id="thumbnail" href="../BioluminescenceRendering" target="_blank"><img src="/assets/img/renderingCompetition/final4_bright.png"><h2>Bioluminescence Rendering</h2></a><br><br>
-<a id="thumbnail" href="https://gitlab.com/sking36/image-based-lighting" target="_blank"><img src="/assets/img/image_based_lighting.jpg"><h2>Image Based Lighting</h2></a><br><br>
-<a id="thumbnail" href="https://cdr.lib.unc.edu/concern/honors_theses/r494vr41m" target="_blank"><img src="/assets/img/honors_thesis_1.jpg"><h2>Mobile AR Telepresence (Honors Thesis)</h2></a><br><br>
-
-<!-- {% assign projects = site.categories.projects %}
-{% assign projects = projects | sort:"weight" %}
-{% for project in projects %}
-<a href="{{project.url}}">{{ project.title }}</a><br>
-{% endfor %} -->
