--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: home
 ---
 <div style="overflow: auto">
-    <img src="assets/img/head.jpg" width="250px" style="float:left; margin-right:2em; margin-top:2em;" alt="portrait">
+    <img src="assets/img/head.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
     <h1>Yitong Deng 邓宜桐</h1>
-    <h3><u>yitong.deng.gr@dartmouth.edu</u></h3>
+    <h4><u>yitong.deng.gr@dartmouth.edu</u></h4>
     <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
         I received my Bachelor of Arts <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music, advised by Professor Bruce Maxwell. 
-        My research focus on computer graphics, around which I have explored topics in dynamic simulation, robotic control, and machine learning.</p>   
+        My research is focused on computer graphics, around which I have explored topics in dynamic simulation, robotic control, and machine learning.</p>   
 </div>
 
 <div style="overflow: auto">
@@ -33,6 +33,8 @@ layout: home
         <a href="https://cs.dartmouth.edu/~bozhu/papers/sph_bubble.pdf">[paper]</a> <a href="https://wang-mengdi.github.io/proj/thin-film-sph/">[webpage]</a> <a href="https://www.youtube.com/watch?v=__1VjKF-gTk">[video]</a></p>
     </div>
 
+    <br><br>
+
     <div>
         <img src="assets/img/soft_drone_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="impulse_fluid">
         <p><b>Soft Multicopter Control Using Neural Dynamics Identification</b><br>
@@ -41,6 +43,5 @@ layout: home
         <a href="assets/paper/soft_drone.pdf">[paper]</a> <a href="https://youtu.be/DjQq3i53W8k">[video]</a> <a href="https://youtu.be/o9KjUyFhmI8">[presentation]</a></p>
     </div>
     <br><br>
-
     
 </div>
