--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: page
 title: Misc
 permalink: /miscellaneous/
@@ -28,4 +28,4 @@ permalink: /miscellaneous/
         position:relative;
     }
     </style>
-</head>
+</head> -->
