--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: home
     <h4><u>yitong.deng.gr@dartmouth.edu</u></h4>
     <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
         I received my Bachelor of Arts <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music, advised by Professor Bruce Maxwell. 
-        My research is focused on computer graphics, around which I have explored topics in dynamic simulation, robotic control, and machine learning.</p>   
+        My research is focused on computer graphics, around which I have explored topics in physical simulation, robotic control, and machine learning.</p>   
 </div>
 <div style="overflow: auto">
     <br>
