--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 <div style="overflow: auto">
     <img src="assets/img/head.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
     <h1>Yitong Deng 邓宜桐</h1>
-    <h4><u>yitong.deng.gr@dartmouth.edu</u></h4>
+    <a href = "mailto: yitong.deng.gr@dartmouth.edu"><h4><u>yitong.deng.gr@dartmouth.edu</u></h4></a>
     <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
         I received my Bachelor of Arts <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music, advised by Professor Bruce Maxwell. 
         My research is focused on computer graphics, around which I have explored topics in physical simulation, robotic control, and machine learning.</p>   
