--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
         <p><b>A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam Simulation</b><br>
             SIGGRAPH 2022<br>
         <b>Yitong Deng</b>, Mengdi Wang, Xiangxin Kong, Shiying Xiong, Zangyueyang Xian, and Bo Zhu<br>
-        <a href="assets/paper/melp_paper.pdf">[paper]</a> <a href="https://yitongdeng.github.io/MELP_Project.github.io/">[webpage]</a> <a href="https://www.youtube.com/watch?v=xW-G7hm6SWQ&t=227s">[video]</a></p>
+        [<a href="assets/paper/melp_paper.pdf">paper</a>] [<a href="https://yitongdeng.github.io/MELP_Project.github.io/">webpage</a>] [<a href="https://www.youtube.com/watch?v=xW-G7hm6SWQ&t=227s">video</a>]</p>
     </div>
     <br><br>
 
@@ -29,7 +29,7 @@ layout: home
         <p><b>Thin-Film Smoothed Particle Hydrodynamics Fluid</b><br>
         SIGGRAPH 2021<br>
         Mengdi Wang, <b>Yitong Deng</b>, Xiangxin Kong, Aditya Prasad, Shiying Xiong, and Bo Zhu<br>
-        <a href="https://cs.dartmouth.edu/~bozhu/papers/sph_bubble.pdf">[paper]</a> <a href="https://wang-mengdi.github.io/proj/thin-film-sph/">[webpage]</a> <a href="https://www.youtube.com/watch?v=__1VjKF-gTk">[video]</a></p>
+        [<a href="https://cs.dartmouth.edu/~bozhu/papers/sph_bubble.pdf">paper</a>] [<a href="https://wang-mengdi.github.io/proj/thin-film-sph/">webpage</a>] [<a href="https://www.youtube.com/watch?v=__1VjKF-gTk">video</a>]</p>
     </div>
 
     <br><br><br>
@@ -39,7 +39,7 @@ layout: home
         <p><b>Soft Multicopter Control Using Neural Dynamics Identification</b><br>
         CORL 2020<br>
         <b>Yitong Deng</b>, Yaorui Zhang, Xingzhe He, Shuqi Yang, Yunjin Tong, Michael Zhang, Daniel DiPietro, and Bo Zhu<br>
-        <a href="assets/paper/soft_drone.pdf">[paper]</a> <a href="https://youtu.be/DjQq3i53W8k">[video]</a> <a href="https://youtu.be/o9KjUyFhmI8">[presentation]</a></p>
+        [<a href="assets/paper/soft_drone.pdf">paper</a>] [<a href="https://youtu.be/DjQq3i53W8k">video</a>] [<a href="https://youtu.be/o9KjUyFhmI8">presentation</a>]</p>
     </div>
     <br><br><br>
     
