--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@ layout: home
     <hr>
     <br>
     <h1>Publications</h1>
-    
+
+    <div>
+        <img src="assets/img/ICLR23_Square.jpg" width="200px" style="float:right; margin-left:2em;" alt="melp">
+        <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
+            ICLR 2023<br>
+        <b>Yitong Deng</b>, Hong-Xing Yu, Jiajun Wu, and Bo Zhu<br>
+        Materials coming soon. </p>
+    </div>
     <div>
         <img src="assets/img/melp_square_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="melp">
         <p><b>A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam Simulation</b><br>
