--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
         <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
             ICLR 2023<br>
         <b>Yitong Deng</b>, Hong-Xing Yu, Jiajun Wu, and Bo Zhu<br>
-        Materials coming soon. </p>
+        [<a href="assets/paper/Neural_Vortex_Particles.pdf">paper</a>] </p>
     </div>
     <br><br><br>
     <div>
