--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
         <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
             ICLR 2023<br>
         <b>Yitong Deng</b>, Hong-Xing Yu, Jiajun Wu, and Bo Zhu<br>
-        [<a href="assets/paper/Neural_Vortex_Particles.pdf">paper</a>] </p>
+        [<a href="assets/paper/Neural_Vortex_Particles.pdf">paper</a>] [<a href="https://yitongdeng.github.io/vortex_learning_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=R2RIS-k50so">video</a>]</p>
     </div>
     <br><br><br><br>
     <div>
