--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: home
     [<a href = "assets/CV/cv.pdf"><h4>CV</h4></a>][<a href = "mailto: yitong.deng.gr@dartmouth.edu"><h4>email</h4></a>]
     <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
         I received my Bachelor of Arts <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music, advised by Professor Bruce Maxwell. 
-        My research is focused on computer graphics, around which I have explored topics in physical simulation, robotic control, and machine learning.</p>   
+        My research is focused on computer graphics, around which I have explored topics in physical simulation, robotics, and machine learning.</p>   
 </div>
 <div style="overflow: auto">
     <br>
