--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 <div style="overflow: auto">
-    <img src="assets/img/head.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
+    <img src="assets/img/head20222.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
     <h1>Yitong Deng 邓宜桐</h1>
     <h4>[<a href = "assets/CV/cv.pdf">CV</a>] [<a href = "mailto: yitong.deng.gr@dartmouth.edu">email</a>]</h4>
     <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
