fix cap in CORL

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: home
     <div>
         <img src="assets/img/soft_drone_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="impulse_fluid">
         <p><b>Soft Multicopter Control Using Neural Dynamics Identification</b><br>
-        CORL 2020<br>
+        CoRL 2020<br>
         <b>Yitong Deng</b>, Yaorui Zhang, Xingzhe He, Shuqi Yang, Yunjin Tong, Michael Zhang, Daniel DiPietro, and Bo Zhu<br>
         [<a href="assets/paper/soft_drone.pdf">paper</a>] [<a href="https://youtu.be/DjQq3i53W8k">video</a>] [<a href="https://youtu.be/o9KjUyFhmI8">presentation</a>]</p>
     </div>
