--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ layout: home
     <h1>Publications</h1>
 
     <div>
-        <img src="assets/img/ICLR23_Square.jpg" width="200px" style="float:right; margin-left:2em;" alt="melp">
+        <img src="assets/img/ICLR23_Square.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
             ICLR 2023<br>
         <b>Yitong Deng</b>, Hong-Xing Yu, Jiajun Wu, and Bo Zhu<br>
-        [<a href="assets/paper/Neural_Vortex_Particles.pdf">paper</a>] [<a href="https://yitongdeng.github.io/vortex_learning_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=R2RIS-k50so">video</a>]</p>
+        [<a href="https://arxiv.org/pdf/2301.11494.pdf">paper</a>] [<a href="https://yitongdeng.github.io/vortex_learning_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=R2RIS-k50so">video</a>]</p>
     </div>
     <br><br><br><br>
     <div>
@@ -31,7 +31,13 @@ layout: home
         [<a href="assets/paper/melp_paper.pdf">paper</a>] [<a href="https://yitongdeng.github.io/MELP_Project.github.io/">webpage</a>] [<a href="https://www.youtube.com/watch?v=xW-G7hm6SWQ&t=227s">video</a>]</p>
     </div>
     <br><br>
-
+    <div>
+        <img src="assets/img/nvm.jpg" width="200px" style="float:right; margin-left:2em;" alt="nvm">
+        <p><b>Neural Vortex Method: from Finite Lagrangian Particles to Infinite Dimensional Eulerian Dynamics</b><br>
+            Computers and Fluids<br>
+            Shiying Xiong, Xingzhe He, Yunjin Tong, <b>Yitong Deng</b>, and Bo Zhu<br>
+        [<a href="https://arxiv.org/pdf/2006.04178.pdf">paper</a>]</p>
+    </div>
     <div>
         <img src="assets/img/sphbubble_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="sphbubble">
         <p><b>Thin-Film Smoothed Particle Hydrodynamics Fluid</b><br>
@@ -43,7 +49,7 @@ layout: home
     <br><br><br>
 
     <div>
-        <img src="assets/img/soft_drone_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="impulse_fluid">
+        <img src="assets/img/soft_drone_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="softdrone">
         <p><b>Soft Multicopter Control Using Neural Dynamics Identification</b><br>
         CoRL 2020<br>
         <b>Yitong Deng</b>, Yaorui Zhang, Xingzhe He, Shuqi Yang, Yunjin Tong, Michael Zhang, Daniel DiPietro, and Bo Zhu<br>
