--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ layout: home
     <img src="assets/img/head22.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
     <h1>Yitong Deng 邓宜桐</h1>
     <h4>[<a href = "assets/CV/cv.pdf">CV</a>] [<a href = "mailto: yitong.deng.gr@dartmouth.edu">email</a>]</h4>
-    <p>I am a second-year master's student at Dartmouth College, advised by Professor Bo Zhu. 
-        I received my Bachelor of Arts <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music, advised by Professor Bruce Maxwell. 
-        My research is focused on computer graphics, around which I have explored topics in physical simulation, robotics, and machine learning.</p>   
+    <p> My research interests lie in computer graphics and physics simulation. In particular, I seek to build elegant computational methods that
+        align mathematical insights with discrete system designs to efficiently and faithfully recreate the various fascinating phenomenon mother nature has to offer. 
+        Recently, I graduated with a M.S. from Dartmouth College where I was very fortunate to be advised by Prof. <a href="https://cs.dartmouth.edu/~bozhu/">Bo Zhu</a>. 
+        Prior to that, I received my B.A. <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music.</p>   
 </div>
 <div style="overflow: auto">
     <br>
