--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ layout: home
 <div style="overflow: auto">
     <img src="assets/img/head22.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
     <h2>Yitong Deng 邓宜桐</h2>
-    <h5>[<a href = "assets/CV/cv.pdf">CV</a>] [<a href = "mailto: yitong.deng.gr@dartmouth.edu">email</a>]</h5>
-    <p> My research interests lie in computer graphics and physics simulation. In particular, I seek to build elegant computational methods that
-        align mathematical insights with discrete system designs to efficiently simulate various fascinating natural phenomena. 
-        I received my M.S. from Dartmouth College, where I was fortunate to be advised by Prof. <a href="https://cs.dartmouth.edu/~bozhu/">Bo Zhu</a>. 
-        Prior to that, I received my B.A. <em>summa cum laude</em> from Colby College with a major in Computer Science and a minor in Music.</p>   
+    <!-- <h5>[<a href = "assets/CV/cv.pdf">CV</a>] [<a href = "mailto: yitong.deng.gr@dartmouth.edu">email</a>]</h5> -->
+    <p> I am an incoming first-year CS Ph.D. student at Stanford University. My research interest lies in the intersection of computer graphics, computational physics, and machine learning. 
+        I strive to design numerical methods well motivated by physical and mathematical principles to faithfully, efficiently, and robustly simulate the intricate motion of real-world objects.  
+        Before joining Stanford, I received my M.S. from Dartmouth College, where I was very fortunate to work with Prof. <a href="https://cs.dartmouth.edu/~bozhu/">Bo Zhu</a>. 
+        I received my B.A. <em>summa cum laude</em> from Colby College.</p>   
 </div>
 <div style="overflow: auto">
     <br>
