--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
     <h2>Yitong Deng 邓宜桐</h2>
     <!-- <h5>[<a href = "assets/CV/cv.pdf">CV</a>] [<a href = "mailto: yitong.deng.gr@dartmouth.edu">email</a>]</h5> -->
     <p> I am an incoming CS Ph.D. student at Stanford. My research interest lies in computer graphics, computational physics, and machine learning. 
-        I strive to design numerical methods well motivated by physical and mathematical principles to faithfully and efficiently simulate the motion of real-world objects.  
+        Particularly, I strive to design numerical methods grounded in physical and mathematical principles to faithfully and efficiently simulate the motion of real-world objects.  
         Before joining Stanford, I received my M.S. from Dartmouth College, where I was very fortunate to work with Prof. <a href="https://cs.dartmouth.edu/~bozhu/">Bo Zhu</a>. 
         I received my B.A. <em>summa cum laude</em> from Colby College.
         <br>
