--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
         I strive to design numerical methods grounded in physical and mathematical principles to faithfully and efficiently simulate the motion of real-world objects.  
         Before joining Stanford, I received my M.S. from Dartmouth College, where I was very fortunate to work with Prof. <a href="https://cs.dartmouth.edu/~bozhu/">Bo Zhu</a>. 
         I received my B.A. <em>summa cum laude</em> from Colby College.
-        <br>
+        <br><br>
         Email: yitongd [at] stanford (dot) edu
     </p>   
 </div>
@@ -30,7 +30,7 @@ layout: home
     <div>
         <img src="assets/img/melp_square_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="melp">
         <p><b>A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam Simulation</b><br>
-            SIGGRAPH 2022<br>
+            ACM Transactions on Graphics (SIGGRAPH 2022)<br>
         <b>Yitong Deng</b>, Mengdi Wang, Xiangxin Kong, Shiying Xiong, Zangyueyang Xian, and Bo Zhu<br>
         [<a href="assets/paper/melp_paper.pdf">paper</a>] [<a href="https://yitongdeng.github.io/MELP_Project.github.io/">webpage</a>] [<a href="https://www.youtube.com/watch?v=xW-G7hm6SWQ&t=227s">video</a>]</p>
     </div>
@@ -46,7 +46,7 @@ layout: home
     <div>
         <img src="assets/img/sphbubble_thumbnail.png" width="200px" style="float:right; margin-left:2em;" alt="sphbubble">
         <p><b>Thin-Film Smoothed Particle Hydrodynamics Fluid</b><br>
-        SIGGRAPH 2021<br>
+        ACM Transactions on Graphics (SIGGRAPH 2021)<br>
         Mengdi Wang, <b>Yitong Deng</b>, Xiangxin Kong, Aditya Prasad, Shiying Xiong, and Bo Zhu<br>
         [<a href="https://cs.dartmouth.edu/~bozhu/papers/sph_bubble.pdf">paper</a>] [<a href="https://wang-mengdi.github.io/proj/thin-film-sph/">webpage</a>] [<a href="https://www.youtube.com/watch?v=__1VjKF-gTk">video</a>]</p>
     </div>
