--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
     <img src="assets/img/head22.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
     <h2>Yitong Deng 邓宜桐</h2>
     <!-- <h5>[<a href = "assets/CV/cv.pdf">CV</a>] [<a href = "mailto: yitong.deng.gr@dartmouth.edu">email</a>]</h5> -->
-    <p> I am an incoming CS Ph.D. student at Stanford. My research interest lies in computer graphics, computational physics, and machine learning. 
+    <p> I am a first-year Ph.D. student in CS at Stanford. My research interest lies in computer graphics, computational physics, and machine learning. 
         I strive to design numerical methods grounded in physical and mathematical principles to faithfully and efficiently simulate the motion of real-world objects.  
         Before joining Stanford, I received my M.S. from Dartmouth College, where I was very fortunate to work with Prof. <a href="https://cs.dartmouth.edu/~bozhu/">Bo Zhu</a>. 
         I received my B.A. <em>summa cum laude</em> from Colby College.
@@ -19,6 +19,13 @@ layout: home
     <br>
     <h1>Publications</h1>
 
+    <div>
+        <img src="assets/img/second_order_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>Second-Order Finite Elements for Deformable Surfaces</b><br>
+            SIGGRAPH Asia 2023 Conference Track<br>
+        Qiqin Le, <b>Yitong Deng</b>, Jiamu Bu, Bo Zhu, and Tao Du<br>
+        [<a href="https://leqiqin.github.io/files/fem2023.pdf">paper</a>] [<a href="https://leqiqin.github.io/publication/fem2023">webpage</a>] [<a href="https://www.youtube.com/watch?v=RnpLhyPNaFg">video</a>]</p>
+    </div>
     <div>
         <img src="assets/img/ICLR23_Square.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
