--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@ layout: home
     <h1>Publications</h1>
 
     <div>
+        <img src="assets/img/nfm_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>Fluid Simulation on Neural Flow Maps</b><br>
+            ACM Transactions on Graphics (SIGGRAPH Asia 2023)<br>
+        <b>Yitong Deng</b>, Hong-Xing Yu, Diyang Zhang, Jiajun Wu, and Bo Zhu<br>
+        [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/assets/paper/NFM_v1.pdf">paper</a>] [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=zNtPw1zr5tM">video</a>]</p>
+    </div>
+    <br><br><br><br>
+    <div>
         <img src="assets/img/second_order_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Second-Order Finite Elements for Deformable Surfaces</b><br>
             SIGGRAPH Asia 2023 Conference Track<br>
         Qiqin Le, <b>Yitong Deng</b>, Jiamu Bu, Bo Zhu, and Tao Du<br>
         [<a href="https://leqiqin.github.io/files/fem2023.pdf">paper</a>] [<a href="https://leqiqin.github.io/publication/fem2023">webpage</a>] [<a href="https://www.youtube.com/watch?v=RnpLhyPNaFg">video</a>]</p>
     </div>
+    <br><br><br><br>
     <div>
         <img src="assets/img/ICLR23_Square.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
