--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: home
         <img src="assets/img/nfm_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Fluid Simulation on Neural Flow Maps</b><br>
             ACM Transactions on Graphics (SIGGRAPH Asia 2023)<br>
-        <b>Yitong Deng</b>, Hong-Xing Yu, Diyang Zhang, Jiajun Wu, and Bo Zhu<br>
+        <b>Yitong Deng</b>, Hong-Xing "Koven" Yu, Diyang Zhang, Jiajun Wu, and Bo Zhu<br>
         [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/assets/paper/NFM_v1.pdf">paper</a>] [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=zNtPw1zr5tM">video</a>]</p>
     </div>
     <br><br><br><br>
@@ -39,7 +39,7 @@ layout: home
         <img src="assets/img/ICLR23_Square.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
             ICLR 2023<br>
-        <b>Yitong Deng</b>, Hong-Xing Yu, Jiajun Wu, and Bo Zhu<br>
+        <b>Yitong Deng</b>, Hong-Xing "Koven" Yu, Jiajun Wu, and Bo Zhu<br>
         [<a href="https://arxiv.org/pdf/2301.11494.pdf">paper</a>] [<a href="https://yitongdeng.github.io/vortex_learning_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=R2RIS-k50so">video</a>]</p>
     </div>
     <br><br><br><br>
