--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: home
     <div>
         <img src="assets/img/nfm_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Fluid Simulation on Neural Flow Maps</b><br>
-            ACM Transactions on Graphics (SIGGRAPH Asia 2023)<br>
+            ACM Transactions on Graphics (SIGGRAPH Asia 2023), <b>Best Paper Award</b><br>
         <b>Yitong Deng</b>, Hong-Xing "Koven" Yu, Diyang Zhang, Jiajun Wu, and Bo Zhu<br>
         [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/assets/paper/NFM_v1.pdf">paper</a>] [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=zNtPw1zr5tM">video</a>]</p>
     </div>
@@ -35,6 +35,14 @@ layout: home
         [<a href="https://leqiqin.github.io/files/fem2023.pdf">paper</a>] [<a href="https://leqiqin.github.io/publication/fem2023">webpage</a>] [<a href="https://www.youtube.com/watch?v=RnpLhyPNaFg">video</a>]</p>
     </div>
     <br><br><br><br>
+    <div>
+        <img src="assets/img/hyfluid.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>Inferring Hybrid Fluid Fields from Videos</b><br>
+            NeurIPS 2023<br>
+        Hong-Xing Yu<sup>*</sup>, Yang Zheng<sup>*</sup>, Yuan Gao, <b>Yitong Deng</b>, Bo Zhu, and Jiajun Wu<br>
+        [<a href="https://arxiv.org/pdf/2312.06561.pdf">paper</a>] [<a href="https://kovenyu.com/hyfluid/">webpage</a>]</p>
+    </div>
+    <br><br><br>
     <div>
         <img src="assets/img/ICLR23_Square.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Learning Vortex Dynamics For Fluid Inference and Prediction</b><br>
