--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: home
         <img src="assets/img/hyfluid.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Inferring Hybrid Fluid Fields from Videos</b><br>
             NeurIPS 2023<br>
-        Hong-Xing Yu<sup>*</sup>, Yang Zheng<sup>*</sup>, Yuan Gao, <b>Yitong Deng</b>, Bo Zhu, and Jiajun Wu<br>
+        Hong-Xing "Koven" Yu<sup>*</sup>, Yang Zheng<sup>*</sup>, Yuan Gao, <b>Yitong Deng</b>, Bo Zhu, and Jiajun Wu<br>
         [<a href="https://arxiv.org/pdf/2312.06561.pdf">paper</a>] [<a href="https://kovenyu.com/hyfluid/">webpage</a>]</p>
     </div>
     <br><br><br>
