--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@ layout: home
     <div>
         <img src="assets/img/nfm_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Fluid Simulation on Neural Flow Maps</b><br>
-            ACM Transactions on Graphics (SIGGRAPH Asia 2023), <b>Best Paper Award</b><br>
+            ACM Transactions on Graphics (SIGGRAPH Asia 2023)<br> 
+            <b>Best Paper Award</b><br>
         <b>Yitong Deng</b>, Hong-Xing "Koven" Yu, Diyang Zhang, Jiajun Wu, and Bo Zhu<br>
         [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/assets/paper/NFM_v1.pdf">paper</a>] [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=zNtPw1zr5tM">video</a>]</p>
     </div>
-    <br><br><br>
+    <br><br>
     <div>
         <img src="assets/img/second_order_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Second-Order Finite Elements for Deformable Surfaces</b><br>
@@ -39,7 +40,7 @@ layout: home
         <img src="assets/img/hyfluid.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Inferring Hybrid Fluid Fields from Videos</b><br>
             NeurIPS 2023<br>
-        Hong-Xing "Koven" Yu<sup>*</sup>, Yang Zheng<sup>*</sup>, Yuan Gao, <b>Yitong Deng</b>, Bo Zhu, and Jiajun Wu<br>
+        Hong-Xing "Koven" Yu*, Yang Zheng*, Yuan Gao, <b>Yitong Deng</b>, Bo Zhu, and Jiajun Wu<br>
         [<a href="https://arxiv.org/pdf/2312.06561.pdf">paper</a>] [<a href="https://kovenyu.com/hyfluid/">webpage</a>]</p>
     </div>
     <br><br><br>
