--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ layout: home
     <img src="assets/img/head2023.jpg" width="250px" style="float:left; margin-right:2em; margin-top:1em;" alt="portrait">
     <h2>Yitong Deng 邓宜桐</h2>
     <!-- <h5>[<a href = "assets/CV/cv.pdf">CV</a>] [<a href = "mailto: yitong.deng.gr@dartmouth.edu">email</a>]</h5> -->
-    <p> I am a first-year Ph.D. student in CS at Stanford. My research interest lies in computer graphics, computational physics, and machine learning. 
+    <p> I am a second-year Ph.D. student in CS at Stanford advised by Prof. <a href="https://physbam.stanford.edu/~fedkiw/">Ron Fedkiw</a>. My research interest lies in computer graphics, computational physics, and machine learning. 
         I strive to design numerical methods grounded in physical and mathematical principles to faithfully and efficiently simulate the motion of real-world objects.  
-        Before joining Stanford, I received my M.S. from Dartmouth College, where I was very fortunate to work with Prof. <a href="https://cs.dartmouth.edu/~bozhu/">Bo Zhu</a>. 
+        Before joining Stanford, I received my M.S. from Dartmouth College, where I was very fortunate to work with Prof. <a href="https://faculty.cc.gatech.edu/~bozhu/">Bo Zhu</a>. 
         I received my B.A. <em>summa cum laude</em> from Colby College.
         <br>
         Email: yitongd [at] stanford (dot) edu
-    </p>   
+    </p>
 </div>
 <div style="overflow: auto">
     <br>
@@ -20,10 +20,33 @@ layout: home
     <h1>Publications</h1>
 
     <div>
+        <img src="assets/img/efm.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>An Eulerian Vortex Method on Flow Maps</b><br>
+            ACM Transactions on Graphics (SIGGRAPH Asia 2024)<br> 
+            Sinan Wang, <b>Yitong Deng</b>, Molin Deng, Hong-Xing Yu, Junwei Zhou, Duowen Chen, Taku Komura, Jiajun Wu, and Bo Zhu<br>
+        [<a href="https://arxiv.org/pdf/2409.06201">paper</a>] [<a href="https://evm.sinanw.com">webpage</a>] [<a href="https://www.youtube.com/watch?v=okVnD-rCYrw">video</a>]</p>
+    </div>
+    <br><br><br>
+    <div>
+        <img src="assets/img/pfm.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>Eulerian-Lagrangian Fluid Simulation on Particle Flow Maps</b><br>
+            ACM Transactions on Graphics (SIGGRAPH 2024)<br> 
+        Junwei Zhou, Duowen Chen, Molin Deng, <b>Yitong Deng</b>, Yuchen Sun, Sinan Wang, Shiying Xiong, Bo Zhu<br>
+        [<a href="https://www.arxiv.org/pdf/2405.09672">paper</a>] [<a href="https://zjw49246.github.io/projects/pfm/">webpage</a>] [<a href="https://www.youtube.com/watch?v=aErgFhxil7o">video</a>]</p>
+    </div>
+    <br><br><br>
+    <div>
+        <img src="assets/img/vortex_bubble2.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>A Vortex Particle-on-Mesh Method for Soap Film Simulation</b><br>
+            ACM Transactions on Graphics (SIGGRAPH 2024)<br> 
+        Ningxiao Tao, Liangwang Ruan, <b>Yitong Deng</b>, Bo Zhu, Bin Wang, Baoquan Chen<br>
+        [<a href="https://taoningxiao.github.io/files/VortexBubble.pdf">paper</a>] [<a href="https://lwruan.com/pubs/vortex-bubble/">webpage</a>] [<a href="https://www.youtube.com/watch?v=nOxEHghSE-U">video</a>]</p>
+    </div>
+    <br><br><br>
+    <div>
         <img src="assets/img/nfm_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Fluid Simulation on Neural Flow Maps</b><br>
-            ACM Transactions on Graphics (SIGGRAPH Asia 2023)<br> 
-            <font color="#de7a10"><b><i>Best Paper Award</i></b></font><br>
+            ACM Transactions on Graphics (SIGGRAPH Asia 2023)<br><b><i>Best Paper Award</i></b><br>
         <b>Yitong Deng</b>, Hong-Xing "Koven" Yu, Diyang Zhang, Jiajun Wu, and Bo Zhu<br>
         [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/assets/paper/NFM_v1.pdf">paper</a>] [<a href="https://yitongdeng-projects.github.io/neural_flow_maps_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=zNtPw1zr5tM">video</a>]</p>
     </div>
@@ -31,17 +54,17 @@ layout: home
     <div>
         <img src="assets/img/second_order_thumbnail.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Second-Order Finite Elements for Deformable Surfaces</b><br>
-            SIGGRAPH Asia 2023 Conference Track<br>
+            SIGGRAPH Asia 2023<br>
         Qiqin Le, <b>Yitong Deng</b>, Jiamu Bu, Bo Zhu, and Tao Du<br>
         [<a href="https://leqiqin.github.io/files/fem2023.pdf">paper</a>] [<a href="https://leqiqin.github.io/publication/fem2023">webpage</a>] [<a href="https://www.youtube.com/watch?v=RnpLhyPNaFg">video</a>]</p>
     </div>
     <br><br><br><br>
     <div>
-        <img src="assets/img/hyfluid2.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <img src="assets/img/hyfluid.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Inferring Hybrid Fluid Fields from Videos</b><br>
-            NeurIPS 2023<br>
-        Hong-Xing "Koven" Yu*, Yang Zheng*, Yuan Gao, <b>Yitong Deng</b>, Bo Zhu, and Jiajun Wu<br>
-        [<a href="https://arxiv.org/pdf/2312.06561.pdf">paper</a>] [<a href="https://kovenyu.com/hyfluid/">webpage</a>]</p>
+            NeurIPS 2023<br> 
+        Hong-Xing "Koven" Yu*, Yang Zheng*, Yuan Gao, <b>Yitong Deng</b>, Bo Zhu, Jiajun Wu<br>
+        [<a href="https://arxiv.org/pdf/2312.06561">paper</a>] [<a href="https://kovenyu.com/hyfluid/">webpage</a>] [<a href="https://www.youtube.com/watch?v=SDY447IYQGM">video</a>]</p>
     </div>
     <br><br><br>
     <div>
