--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@ layout: home
     <h1>Publications</h1>
 
     <div>
+        <img src="assets/img/noise_warping.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>Infinite-Resolution Integral Noise Warping for Diffusion Models</b><br>
+            ICLR 2025<br> 
+            <b>Yitong Deng</b>, Winnie Lin, Lingxiao Li, Dmitriy Smirnov, Ryan Burgert, Ning Yu, Vincent Dedun, and Mohammad H. Taghavi<br>
+        [<a href="https://openreview.net/pdf?id=Y6LPWBo2HP">paper</a>] [<a href="https://yitongdeng-projects.github.io/noise_warping_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=C8oyE_UmzyI">video</a>]</p>
+    </div>
+    <div>
         <img src="assets/img/efm.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>An Eulerian Vortex Method on Flow Maps</b><br>
             ACM Transactions on Graphics (SIGGRAPH Asia 2024)<br> 
