added noise warping

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
     <h1>Publications</h1>
 
     <div>
-        <img src="assets/img/noise_warping.png" width="190px" style="float:right; margin-left:2em;" alt="dvp">
+        <img src="assets/img/noise_warping.png" width="190px" style="text-align: center" alt="dvp">
         <p><b>Infinite-Resolution Integral Noise Warping for Diffusion Models</b><br>
             ICLR 2025<br> 
             <b>Yitong Deng</b>, Winnie Lin, Lingxiao Li, Dmitriy Smirnov, Ryan Burgert, Ning Yu, Vincent Dedun, and Mohammad H. Taghavi<br>
