--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@ layout: home
     <br>
     <h1>Publications</h1>
 
+
     <div>
-        <img src="assets/img/noise_warping.png" width="190px" style="text-align: center" alt="dvp">
+        <img src="assets/img/goflow.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <p><b>Go-with-the-Flow: Motion-Controllable Video Diffusion Models Using Real-Time Warped Noise</b><br>
+            Arxiv<br> 
+            Ryan Burgert, Yuancheng Xu, Wenqi Xian, Oliver Pilarski, Pascal Clausen, Mingming He, Li Ma, <b>Yitong Deng</b>, Lingxiao Li, Mohsen Mousavi, Michael Ryoo, Paul Debevec, Ning Yu<br>
+        [<a href="https://arxiv.org/pdf/2501.08331">paper</a>] [<a href="https://eyeline-research.github.io/Go-with-the-Flow/">webpage</a>] [<a href="https://www.youtube.com/watch?v=78EZ99uGXLM">video</a>]</p>
+    </div>
+    <br><br><br>
+    <div>
+        <img src="assets/img/noise_warping.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Infinite-Resolution Integral Noise Warping for Diffusion Models</b><br>
             ICLR 2025<br> 
             <b>Yitong Deng</b>, Winnie Lin, Lingxiao Li, Dmitriy Smirnov, Ryan Burgert, Ning Yu, Vincent Dedun, and Mohammad H. Taghavi<br>
