--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: home
 
 
     <div>
-        <img src="assets/img/goflow2.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
+        <img src="assets/img/goflow2.jpg" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Go-with-the-Flow: Motion-Controllable Video Diffusion Models Using Real-Time Warped Noise</b><br>
             Arxiv<br> 
             Ryan Burgert, Yuancheng Xu, Wenqi Xian, Oliver Pilarski, Pascal Clausen, Mingming He, Li Ma, <b>Yitong Deng</b>, Lingxiao Li, Mohsen Mousavi, Michael Ryoo, Paul Debevec, Ning Yu<br>
