--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: home
         <p><b>Infinite-Resolution Integral Noise Warping for Diffusion Models</b><br>
             ICLR 2025<br> 
             <b>Yitong Deng</b>, Winnie Lin, Lingxiao Li, Dmitriy Smirnov, Ryan Burgert, Ning Yu, Vincent Dedun, and Mohammad H. Taghavi<br>
-        [<a href="https://openreview.net/pdf?id=Y6LPWBo2HP">paper</a>] [<a href="https://yitongdeng-projects.github.io/noise_warping_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=C8oyE_UmzyI">video</a>]</p>
+        [<a href="https://openreview.net/pdf?id=Y6LPWBo2HP">paper</a>] [<a href="https://yitongdeng-projects.github.io/noise_warping_webpage/">webpage</a>] [<a href="https://www.youtube.com/watch?v=l0Xu008M3DM">video</a>]</p>
     </div>
     <br><br><br>
     <div>
