--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: home
     <div>
         <img src="assets/img/goflow2.png" width="200px" style="float:right; margin-left:2em;" alt="dvp">
         <p><b>Go-with-the-Flow: Motion-Controllable Video Diffusion Models Using Real-Time Warped Noise</b><br>
-            Arxiv<br> 
+            CVPR 2025 (Oral)<br> 
             Ryan Burgert, Yuancheng Xu, Wenqi Xian, Oliver Pilarski, Pascal Clausen, Mingming He, Li Ma, <b>Yitong Deng</b>, Lingxiao Li, Mohsen Mousavi, Michael Ryoo, Paul Debevec, Ning Yu<br>
         [<a href="https://arxiv.org/pdf/2501.08331">paper</a>] [<a href="https://eyeline-research.github.io/Go-with-the-Flow/">webpage</a>] [<a href="https://www.youtube.com/watch?v=78EZ99uGXLM">video</a>]</p>
     </div>
